# islamicatlas-canonical

./: ._LICENSE  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HAFTA2_DELIVERABLE.md  HAFTA3_DELIVERABLE.md  HAFTA4_DELIVERABLE.md  HAFTA4_PATCH_NOTES.md  HAFTA4_SESSION_NOTES.md  LICENSE  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_HAFTA3.md  NEXT_SESSION_PROMPT_HAFTA4.md  NEXT_SESSION_PROMPT_HAFTA5.md  README.md  mac_h5_context_zip.sh
.github/: CODEOWNERS  pull_request_template.md
_archive/phase0-kickoff-v0.1.0/: fatima-kickoff.md  meeting-01-agenda.md  meeting-01-notes.template.md  pyproject.toml  setup-github.md
_archive/phase0-kickoff-v0.1.0/audit_output_example/: README.md  all_dynasties_enriched.md  all_rulers_merged.md  cairo.md  darpislam_detail_0.md  darpislam_detail_1.md  darpislam_detail_2.md  darpislam_detail_3.md  darpislam_detail_6.md  dia_chunks.md  dia_lite.md  dia_works.md  duplicates.md  dynasty_relations.md  ei1_lite.md  ei1_works.md  ibn_battuta_atlas_layer.md  le_strange_eastern_caliphate.md  muqaddasi_xref.md  scholars.md  summary.json  yaqut_lite.md
_archive/phase0-kickoff-v0.1.0/issues/: 001-week1-audit.md  002-canonical-scope.md  003-adr-001-review.md  README.md
_archive/phase0-kickoff-v0.1.0/schema/: README.md
_archive/phase0-kickoff-v0.1.0/schema/canonical/: attestation.schema.json  dynasty.schema.json  person.schema.json  place.schema.json  route.schema.json  source.schema.json  work.schema.json
_archive/phase0-kickoff-v0.1.0/scripts/: README.md  requirements.txt
audit_output_example/: alam_lite.md  battles.md  causal_links.md  (+27 more)
(+211 files in other folders)
